  * fixed a bug in the search services on a local project
  * fixed a bug that occurred when updating the email address of an administrator user
  * use an embedded unicode font (arial unicode ms) in PDF generated by invokable reporters and skos diff
    fixing an issue with Chinese text
  * fixed a bug in the replaceBaseURI which caused the removal of all Bnode in the working graph
  * updated in OntoLex projects the dependency on version 3 of vocabulary LexInfo 3  
  * updated dependency on Sheet2RDF 4.1.0
  * updated dependency on Coda 1.7.1
  * updated dependency on maple 0.0.7

version 8.0.1
date: 08/10/2020
  * improved the performance of the history paging service
  * improved the performance when loading the topConcept in the concept tree
  * improved the performance of the service listing recommended properties for a resource
  * added inference for the cform term to cover all cform(_) and cform(_,_) expressions
  * added an option to the resview for toggling the show of deprecated concepts
  * added zip files to the range of supported file types when loading data
  * enable the triple editor also for other roles than the administrator, by associating the capability rdf(code)
  * take system properties into account (e.g. proxy settings) when using the default HTTPClientBuilder in Apache
    HTTPComponents
  * fixed a NullPointerException thrown when clicking "Export as..." in the alignment validation tool
  * added icelandic to system languages
  * fixed NoSuchPropertyException when trying to configure the NativeTemplateBasedURIGenerator
  * fixed a bug in label search (when labels start or end with a . in a project hosted on GraphDB)
  * fixed bugs in repairing broken imports from file
  * fixed the interpretation of min=0 pearl annotation for custom forms
  * fix for constraint min=0 in Custom Form's annotations not properly interpreted
  * brought a few changes to the services for managing broken imports