@@ -54,6 +54,7 @@ date: dd/mm/yyyy
   * use an embedded unicode font (arial unicode ms) in PDF generated by invokable reporters and skos diff
     fixing an issue with Chinese text
   * fixed a bug in the replaceBaseURI which caused the removal of all Bnode in the working graph
+  * fixed a bug in project creation which didn't skip validation for data preload and indexing
   * updated in OntoLex projects the dependency on version 3 of vocabulary LexInfo 3  
   * updated dependency on Sheet2RDF 4.1.0
   * updated dependency on Coda 1.7.1
